# Data-lake-with-Hadoop-and-S3

./: .gitignore  README.md  S3_data_lake.pptx
S3-DB demo/: S3-DB_Demo.md  docker-compose.yml  etl_s3_to_postgres.py  upload_data_to_minio.py
bitcoin-hadoop-pipeline/: .dockerignore  Bitcoin Block Data Ingestion Pipeline.md  hadoop_doc.ipynb  pyproject.toml  requirements.txt
bitcoin-hadoop-pipeline/docker/: docker-compose.kafka.yml
bitcoin-hadoop-pipeline/src/consumer/: block_consumer.py  main.py
bitcoin-hadoop-pipeline/src/producer/: block_producer.py  main.py
bitcoin-hadoop-pipeline/src/schemas/: block_schema.avsc  raw_block_schema.avsc  user_events.avsc
bitcoin-hadoop-pipeline/src/utils/: avro_deserializer.py  config.py  config_loader.py  fs_utils.py  hdfs_client.py  helpers.py  kafka_consumer.py  kafka_producer.py  logger.py  rpc_client.py
s3_data_lake_ppt/: README.md  s3.pptx
